--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,6 @@ Dockerfile
 *.xls
 *.xlsx
 *.log
+/test/.ipynb_checkpoints/
+/test/sla/.ipynb_checkpoints/
+/pydata-book-1st-edition/.ipynb_checkpoints/
